static/styles/style.css
/* ... */
.wrapper-w{
    display: inline-block;
    width:70px;
    text-align: left;
    padding: 5px 7px;
}

.padding-left-right{
    padding-left:15px;
    padding-right:15px;
}

.inside-scoring-big{
    color:rgb(105, 191, 139);
}
.high-usage-scoring-big{
    color:rgb(105, 139, 191)
}
.left{
    text-align: left;
    padding:0;
}
@media only screen and (max-width: 700px) {
    .left{
        text-align: center;
    }
}
@media only screen and (max-width: 700px) {
    .alluvial_label{
        font-size:10px !important;
    }
}
#checkall{
    margin-right:16px;
}

.collapsible {
    color: black;
    cursor: pointer;
    width: 100%;
    text-align: left;
    outline: none;
    font-size: 13px;
    padding:5px 15px;
    background:#ccc;
    border:thin black solid;
    -webkit-border-radius: 0;
    border-radius: 0;
}

.active, .collapsible:hover {
    background-color:black;
    color:white;
}

.collapsible-content {
    padding: 10px 18px;
    display: none;
    overflow: hidden;
    border:1px solid black;
    background-color: #f1f1f1;
}

.collapsible:after {
    content: '\002B';
    color: black;
    font-weight: bold;
    float: right;
    margin-left: 5px;
}

.collapsible:hover:after {
    color: white;
    font-weight: bold;
    float: right;
    margin-left: 5px;
}


.active:after {
    content: "\2212";
    color:white;
}

/*#gamelog_table th{
    padding:2px 3px;
    position:fixed;
}
#gamelog_table td{
    padding:2px 3px;
}*/

@media only screen and (max-width: 767px) {
    .explanation {
        padding-top: 0 !important;
    }
}
.right-center{
    text-align: right;
}

.left-center{
    text-align: left;
}

@media only screen and (max-width: 767px) {
    .right-center{
        text-align: center;
    }
    .left-center{
        text-align: center;
    }
}
@media only screen and (max-width: 991px) {
    .pad-when-small {
        padding-top:10px;
        padding-bottom:10px;
        /*border-bottom: grey thin dashed;*/
    }
    .margin-when-small {
        padding-top:10px;
        margin-bottom:20px;
    }
}
@media only screen and (min-width: 768px) {
    .border-bottom{
        border-bottom: thin grey dashed;
    }
}

@media only screen and (max-width:991px) {
    .border-bottom-special{
        border-bottom: thin grey dashed;
    }
}
@media only screen and (max-width: 991px) {
    #stats > strong{
        padding-top:20px;
    }

    #cluster-div{
        padding-top:20px;
    }
}
@media only screen and (max-width: 767px) {
    .border-pad-bottom{
        border-bottom: thin grey dashed;
        padding-bottom:20px;
    }
}

@media only screen and (max-width:991px) {
    #game_log_div{
        padding-right:0 !important;
    }
}

@media only screen and (max-width: 329px){
    #amount{
        text-align: center !important;
    }
}

.border-bottom-always{
    border-bottom:thin grey dashed;
}

.noUi-connect{
    background: #585757 !important;
}

